# SPLIB

./: CMakeLists.txt  README.md
src/cpp/splib/: initPlugin.cpp  initPlugin.h
src/python3/splib/: __init__.py
src/python3/splib/numerics/: __init__.py
tests/: CMakeLists.txt  SPLIB_test.cpp
tests/python3/splib/numerics/: matrix_test.py  quat_test.py  vec3_test.py
